fix: make layout perfectly responsive on iOS Safari to prevent bouncy navbar

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -69,6 +69,7 @@
   html {
     scroll-behavior: smooth;
     height: 100%;
+    overflow: hidden;
   }
 
   body {
@@ -76,8 +77,8 @@
     @apply antialiased transition-colors duration-300;
     @apply bg-light-bg text-light-text;
     -webkit-overflow-scrolling: touch;
-    min-height: 100vh;
-    min-height: 100dvh;
+    height: 100%;
+    overflow: hidden;
     overscroll-behavior: none;
   }
 
@@ -354,7 +355,8 @@
 }
 
 .layout-height {
-  height: 100vh;
+  height: 100%;
+  height: 100vh; /* Fallback for browsers that do not support dvh */
   height: 100dvh;
 }
 
